flux/apps/vaultwarden/app/route.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden-private
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "Apps"
    gethomepage.dev/name: Vaultwarden
    gethomepage.dev/icon: vaultwarden.png
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=vaultwarden"
spec:
  parentRefs:
    - name: private-gateway
      namespace: envoy-gateway
      sectionName: https
  hostnames:
    - secrets.nahsi.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vaultwarden
          port: 80
          weight: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden-public
spec:
  parentRefs:
    - name: public-gateway
      namespace: envoy-gateway
      sectionName: https
  hostnames:
    - secrets.nahsi.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vaultwarden
          port: 80
          weight: 1
